# hftrie

./: CMakeLists.txt  License.txt  README.md
include/hft/: hfnode.hpp  hft.hpp  hftrie.hpp
src/: hfnode.cpp  hft.cpp  hftrie.cpp
tests/: run_hftrie.cpp  seqsearch.cpp  test_hft.cpp  test_hftrie.cpp
